# DESIL

./: Readme.md
src/clang/test/ParserHLSL/: hlsl_is_rov_attr.hlsl  hlsl_is_rov_attr_error.hlsl  hlsl_resource_class_attr.hlsl  hlsl_resource_class_attr_error.hlsl  hlsl_resource_handle_attrs.hlsl
src/clang/test/SemaHLSL/Types/Traits/: IsIntangibleType.hlsl  IsIntangibleTypeErrors.hlsl
src/llvm/test/CodeGen/DirectX/: normalize.ll  normalize_error.ll
src/llvm/unittests/Support/: ModRefTest.cpp
src/mlir/examples/toy/: CMakeLists.txt  Ch5_dynamicLowering_test.tar.bz2  FIXUB.tar.bz2
src/mlir/examples/toy/AutoInstrumentation/: CMakeLists.txt  main.cpp
src/mlir/examples/toy/CheckSum/: CMakeLists.txt  main.cpp
src/mlir/examples/toy/CheckSum/checksum/: .checksum.cpp.swp  checksum.cpp
src/mlir/examples/toy/CheckSum/include/checksum/: checksum.h
src/mlir/examples/toy/CollectCoverage/: CMakeLists.txt
src/mlir/examples/toy/CreateNode/: AffineNodeGenerator.cpp  MemrefNodeGenerator.cpp  SCFNodeGenerator.cpp  TensorNodeGenerator.cpp  TosaNodeGenerator.cpp  VectorNodeGenerator.cpp
src/mlir/examples/toy/FixUBnew/: CMakeLists.txt  FixUBMain.cpp
src/mlir/examples/toy/FixUBnew/fixub/: ConstantPool.cpp  FixAffine.cpp  FixArith.cpp  FixIndex.cpp  FixLinalg.cpp  FixMemRef.cpp  FixScf.cpp  FixTensor.cpp  FixTosa.cpp  FixUBUtils.cpp  FixVector.cpp
src/mlir/examples/toy/GetExeTargetOp/: CMakeLists.txt  main.cpp
src/mlir/examples/toy/GetTargetOp/: CMakeLists.txt  main.cpp
src/mlir/examples/toy/MLIRSmith/: CMakeLists.txt  toyc.cpp
src/mlir/examples/toy/MLIRSmith/include/smith/: MLIRSmith.h  config.h
src/mlir/examples/toy/MLIRSmith/include/smith/generators/: OpGeneration.h
src/mlir/examples/toy/MLIRSmith/include/toy/: CMakeLists.txt  Ops.td  Passes.h
src/mlir/examples/toy/MLIRSmith/mlir/: Dialect.cpp
src/mlir/examples/toy/MLIRSmith/smith/: MLIRSmith.cpp  TypedValuePool.cpp  Util.cpp  ValueGeneration.cpp
src/mlir/examples/toy/MLIRSmith/smith/generators/: .LinalgGeneratorProvider.cpp.swp  .TensorGeneratorProvider.cpp.swp  AffineGeneratorProvider.cpp  ArithGeneratorProvider.cpp  BufferizationGeneratorProvider.cpp  FuncGeneratorProvider.cpp  IndexGeneratorProvider.cpp  LinalgGeneratorProvider.cpp  MathGeneratorProvider.cpp  MemrefGeneratorProvider.cpp  OpGeneratorProvider.cpp  SCFGeneratorProvider.cpp  SPIRVGeneratorProvider.cpp  TensorGeneratorProvider.cpp  TosaGeneratorProvider.cpp  VectorGeneratorProvider.cpp
src/mlir/examples/toy/ReduceCrash/: CMakeLists.txt  main.cpp
src/mlir/examples/toy/ReduceExecuteCrash/: CMakeLists.txt  main.cpp
src/mlir/examples/toy/ReduceLast/: CMakeLists.txt  main.cpp
src/mlir/examples/toy/ReduceMLIR/: CMakeLists.txt  main.cpp
src/mlir/examples/toy/ReducePrint/: CMakeLists.txt  main.cpp
src/mlir/examples/toy/ReduceWrongCode/: CMakeLists.txt  main.cpp
