add_custom_target(Toy)
set_target_properties(Toy PROPERTIES FOLDER "MLIR/Examples")

macro(add_toy_chapter name)
  add_dependencies(Toy ${name})
  add_llvm_example(${name} ${ARGN})
endmacro(add_toy_chapter name)

add_subdirectory(Ch1)
add_subdirectory(Ch2)
add_subdirectory(Ch3)
add_subdirectory(Ch4)
add_subdirectory(Ch5)
add_subdirectory(Ch6)
add_subdirectory(Ch7)

add_subdirectory(CheckSum)
add_subdirectory(FixUBnew)
add_subdirectory(MLIRSmith)

add_subdirectory(ReplaceDataEdge)
add_subdirectory(ReplaceControlEdge)
add_subdirectory(DeleteNode)
add_subdirectory(CreateNode)
add_subdirectory(CollectCoverage)

add_subdirectory(ReduceCrash)
add_subdirectory(ReducePrint)
add_subdirectory(ReduceWrongCode)
add_subdirectory(GetTargetOp)
add_subdirectory(GetExeTargetOp)
add_subdirectory(ReduceMLIR)
add_subdirectory(ReduceExecuteCrash)
add_subdirectory(AutoInstrumentation)
add_subdirectory(ReduceLast)
